docker/pma-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\repositories\github\challenges\docker\kompose.exe convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: pma
  name: pma
spec:
  ports:
  - name: "8090"
    port: 8090
    targetPort: 80
  selector:
    io.kompose.service: pma
status:
  loadBalancer: {}
